--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,10 +12,11 @@ jobs:
         with: {version: '2025.1.1'}
 
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: false
       matrix:
+        runner: ['ubuntu-latest', 'macos-latest', 'windows-latest']
         postgres: ['17', '16', '15', '14']
         go:       ['1.25', '1.18']
     steps:
